medium editor z-index fix

--- a/site/css/ext/medium-editor/medium-editor.css
+++ b/site/css/ext/medium-editor/medium-editor.css
@@ -60,7 +60,7 @@
   word-break: break-all;
   word-wrap: break-word;
   visibility: hidden;
-  z-index: 2000; }
+  z-index: 2002; }
   .medium-editor-anchor-preview a {
     color: #fff;
     display: inline-block;
